add html file for google

--- a/backend/views/tathkeerTemplate.handlebars
+++ b/backend/views/tathkeerTemplate.handlebars
@@ -58,11 +58,11 @@
     <div class="header">تنبيه بانتهاء  {{documentName}}</div>
     <div class="content">
       عزيزي المستخدم،<br><br>
-      نود إعلامك أن  {{documentName}} المضاف إلى موقع <strong>تذكير</strong> سينتهي خلال أقل من أسبوع.<br>
+      نود إعلامك أن  {{documentName}} المضاف إلى موقع <strong>تذكير</strong> سينتهي قريبا.<br>
       يرجى التأكد من تجديده في الوقت المناسب لتجنب أي مشاكل مستقبلية.<br><br>
       يمكنك مراجعة بياناتك من خلال الضغط على الزر أدناه.
     </div>
-    <a href="{{link}}" class="btn-activate">عرض التفاصيل</a>
+    <a href="https://investment-1-iu3q.onrender.com/home" class="btn-activate">عرض التفاصيل</a>
     <div class="footer">
       إذا لم تقم بإضافة هذه الوثيقة إلى حسابك، يرجى تجاهل هذه الرسالة أو التواصل مع فريق الدعم.
     </div>
